2001-04-26  Martin Baulig  <baulig@suse.de>

	* gnome-file-saver.[ch]: Removed.

2001-04-26  Martin Baulig  <baulig@suse.de>

	* gnome-file-selector-dialog.h: Removed; this file was never
	really used.

2001-04-26  Martin Baulig  <baulig@suse.de>

	* gnome-app-util.[ch], gnome-dialog-util.[ch], gnome-dialog.[ch],
	gnome-messagebox.[ch], gnome-propertybox.[ch], gnome-scores.[ch]:
	Removed; they are already in libcompat, but now all code which was
	still using them is fixed.

2001-04-26  Martin Baulig  <baulig@suse.de>

	* libgnomeui.h: Don't Include gnome-app-helper.h,
	gnome-dialog.h, gnome-dialog-util.h, gnome-messagebox.h,
	gnome-propertybox.h and gnome-scores.h.

2001-04-26  Martin Baulig  <baulig@suse.de>

	* gnome-stock.c: Comment out everything which was using code from
	gnome-messagebox.[ch] and gnome-propertybox.[ch].

2001-04-25  Martin Baulig  <baulig@suse.de>

	* gnome-about.[ch]: Use GtkDialog, not GnomeDialog.
	(GnomeAbout, GnomeAbout): Derive from GtkDialog, not GnomeDialog.

	* gnome-client.[ch]: Likewise.
	(gnome_client_save_any_dialog, gnome_client_save_error_dialog): Take
	a GtkDialog as argument, not a GnomeDialog.

	* gnome-helpsys.c, gnome-href.c, gnome-icon-entry.c, gnome_segv.c: Use
	GtkDialog, not GnomeDialog.

	* gnome-window.c (gnome_window_set_icon, gnome_window_set_icon_from_file):
	Moved here from gnome-app-util.c.

2001-04-25  Martin Baulig  <baulig@suse.de>

	* gnome-app-helper.[ch], gnome-app-util.[ch], gnome-cursors.[ch],
	gnome-dialog-util.[ch], gnome-dialog.[ch], gnome-dock*.[ch],
	gnome-messagebox.[ch], gnome-preferences.[ch], gnome-propertybox.[ch],
	gnome-scores.[ch], gnome-stock.[ch], gtkpixmapmenuitem.[ch]:
	Copied all these files to libcompat/libgnomeui/; they're still here for
	a while so that we won't break compilation here.

2001-04-25  Martin Baulig  <baulig@suse.de>

	* gnome-dock*.[ch]: Attention! These files have been moved to libbonoboui
	and renamed to bonobo-dock*.[ch]. We'll provide a compatibility wrapper with